# field-force-ais

./: .gitignore  README.md
field-force-cpp/: CMakeLists.txt
field-force-cpp/field-force-cpp/: CMakeLists.txt  main.cpp
field-force-cpp/field-force-cpp/ai/: ai.cpp  ai.h
field-force-cpp/field-force-cpp/board/: consumable.cpp  consumable.h  fire.cpp  fire.h  gamefield.cpp  gamefield.h  mapobject.cpp  mapobject.h  tile.cpp  tile.h  wall.cpp  wall.h
field-force-cpp/field-force-cpp/connection/: client.cpp  client.h  clienthandle.cpp  clienthandle.h  clientsend.cpp  clientsend.h  packet.cpp  packet.h
field-force-cpp/field-force-cpp/game/: gameconstants.h  gamestate.cpp  gamestate.h  move.cpp  move.h  player.cpp  player.h  skill.cpp  skill.h
field-force-java/: build.xml
field-force-java/src/: Client.java  ClientHandle.java  ClientSend.java  Main.java  Packet.java
field-force-java/src/AI/: AI.java  Constants.java  Evaluator.java
field-force-java/src/Board/: Consumable.java  Fire.java  GameField.java  MapObject.java  Tile.java  Wall.java
field-force-java/src/Connection/: Client.java  ClientHandle.java  ClientPackets.java  ClientSend.java  Packet.java  ServerPackets.java
field-force-java/src/Game/: Direction.java  Fire.java  GameConstants.java  GameField.java  GameState.java  MapObject.java  Move.java  MoveType.java  Player.java  Skill.java  SkillType.java  Tile.java  Wall.java
field-force-python/: main.py  model_weights.pth  rewards.txt
field-force-python/ai/: agent.py  ai.py
field-force-python/ai/customenv/: __init__.py
field-force-python/ai/customenv/envs/: __init__.py  field_env.py
field-force-python/board/: consumable.py  fire.py  gamefield.py  mapobject.py  tile.py  wall.py
field-force-python/connection/: client.py  clienthandle.py  clientsend.py  packet.py
field-force-python/game/: gameconstants.py  gamestate.py  move.py  player.py  skill.py
